# basal-app

./: .claude  .env.example  .env.production.example  .env2  .gitignore  .pre-commit-config.yaml  =3.5  CHANGELOG.md  CLAUDE.md  Caddyfile  DEPLOYMENT.md  Dockerfile  README.md  conftest.py  deploy-docker.sh  docker-compose.yml  manage-production  manage.py  project_description.md  pyproject.toml  render.yaml  restore-backup.sh  run_dev.sh  sync-dev-from-prod.sh  todo.md
.github/workflows/: backup-database.yml  backup.yml  send-reminders.yml
apps/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/audit/: admin.py  apps.py  middleware.py  models.py  registry.py  signals.py  tests.py  urls.py  views.py
apps/bulk_email/: apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/contacts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/core/: admin.py  context_processors.py  decorators.py  export.py  mixins.py  models.py  tests.py  urls.py  views.py
apps/courses/: admin.py  forms.py  kommune_backfill.py  models.py  public_urls.py  tests.py  urls.py  utils.py  views.py
apps/emails/: admin.py  apps.py  models.py  services.py  tests.py  views.py
apps/goals/: calculations.py  constants.py  tests.py  urls.py  views.py
apps/schools/: admin.py  constants.py  consumption.py  forms.py  kommuner.py  mixins.py  models.py  school_years.py  tests.py  tests_filter_mixin.py  tests_import_stil.py  tests_kommune.py  urls.py  utils.py  views.py
apps/signups/: admin.py  apps.py  auth.py  forms.py  models.py  tests.py  urls.py  views.py
apps/webinars/: admin.py  apps.py  forms.py  models.py  public_urls.py  tests.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  development.py  production.py  test.py
docs/: db-schema.dot  tilmeldingsflow-vejledning.md
docs/plans/: 2026-01-22-project-goals-dashboard-design.md  2026-01-22-project-goals-implementation.md  2026-01-23-course-signup-auth-design.md  2026-01-23-course-signup-auth-implementation.md  2026-01-26-improved-course-page-design.md  2026-01-26-improved-course-page.md  2026-01-30-school-files-and-public-page-design.md  (+3 more)
(+219 files in other folders)
