[project]
name = "course-enrollment"
version = "0.1.0"
description = "Course Enrollment Management System for teacher training programs"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "psycopg[binary]>=3.1",
    "django-crispy-forms>=2.1",
    "crispy-bootstrap5>=2024.2",
    "django-htmx>=1.17",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "whitenoise>=6.6",
    "gunicorn>=21.0",
    "dj-database-url>=2.1",
    "resend>=2.0",
    "django-summernote>=0.8",
    "boto3>=1.34",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "factory-boy>=3.3",
    "ruff>=0.1",
    "pre-commit>=3.0",
    "django-debug-toolbar>=4.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-v --tb=short -n 4 --cov=apps --cov-fail-under=80"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*", "*/management/commands/*"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
